syntax = "proto3";

package order;

option go_package = "ADV3/proto/orderpb";

import "google/protobuf/empty.proto";

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  int32 price = 4;
  string image_url = 5;
}

message Order {
  string id = 1;
  string user_id = 2;
  string status = 3;
  repeated OrderItem items = 4;
  int64 created_at = 5;
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  string order_id = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message GetAllOrdersRequest {}

message GetAllOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message DeleteOrderRequest {
  string id = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (google.protobuf.Empty);
  rpc DeleteOrder(DeleteOrderRequest) returns (google.protobuf.Empty);
}
